--- a/app.json
+++ b/app.json
@@ -19,7 +19,12 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "notification": {
+        "icon": "./assets/images/notification-icon.png",
+        "color": "#FFD400"
+      },
+      "package": "com.blosus.AlarmasApp"
     },
     "web": {
       "output": "static",
@@ -43,6 +48,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "9db2038c-ea44-4d2c-a450-eed56cade247"
+      }
     }
   }
 }
